refactored '/tweets/:id'

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,10 +1,10 @@
-<h3> <%= @tweet.user %> </h3>
+<h3> <%= @tweet.user.username %> </h3>
 <br>
 <p> <%= @tweet.content %> </p>
 <br>
-<a href="/tweets/<%= @tweet.id %>/edit">To edit this tweet click here.</a>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 <br>
 <form action="/tweets/<%= @tweet.id %>/delete" method="post">
-  <p>To delete this tweet click the button </p>
-  <input type = "submit" value = "delete">
+  <p>Delete Tweet </p>
+  <input type = "submit" value = "Delete Tweet">
 </form>
