--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,9 @@
 <h1> Edit tweet. </h1>
 <br>
-<form action= '/tweets/:id' method = "post">
+<h3> <%= @tweet.content %> </h3>
+<br>
+<form action= '/tweets/<%= @tweet.id %>' method = "post">
+  <input type="hidden" name="_method" value="patch">
   <label>Content: </label>
   <input type="text" name="content" />
 <br>
