refactored delete route. All tests now passing

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -5,6 +5,6 @@
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 <br>
 <form action="/tweets/<%= @tweet.id %>/delete" method="post">
-  <p>Delete Tweet </p>
+  <input id="hidden" type="hidden" name="_method" value="delete">
   <input type = "submit" value = "Delete Tweet">
 </form>
