--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head> <title> Write a Tweet </title>
+  <head> <title> Edit Tweet </title>
   </head>
 
   <body>
-    <h1>Writing a Tweet </h1>
+    <h1>Edit Tweet </h1>
     <form method="POST" action="/tweets">
-      <input type="text" name="content">
+      <input type="text" name="content" placeholder="@tweet.content">
       <button type="submit" value="submit">Submit</button>
     </form>
   </body>
