--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Your Fweets!</title>
+	<title><%=@user.name%>'s' Fweets!</title>
 </head>
 <body>
 		<%@user.tweets.each_with_index do |tweet, i|%>
