--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head> <title> Fwitter </title>
-  </head>
+<head>
+	<title>Letsa Fweet!</title>
+</head>
+<body>
+	<h1>Welcome to Fwitter</h1>
+	<a href="/login"><h4>Login</h4></a>
+	<h4>or</h4>
+	<a href="/signup"><h4>Sign Up</h4></a>
 
-  <body>
-    Welcome to Fwitter!
-  </body>
+</body>
 </html>
