--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -8,15 +8,16 @@
     <br></br>
     <h3>  - <%=@user.username%></h3>
 
-    <%if logged_in?%>
-      <form action="/tweets/<%=@tweet.id%>/delete" method="POST">Delete Tweet</a>
-      <input id="hidden" type="hidden" name="_method" value="delete">
-		  <input type="submit" value="delete">
-      </form>
+    
+    <form method="post" action="/tweets/<%=@tweet.id%>/delete">
+    <input id="hidden" type="hidden" name="_method" value="delete">
+
+    <input type="submit" value="delete" id="Delete Tweet">
+    <form>
 
       <form action="/tweets/<%=@tweet.id%>/edit" method="GET">Edit Tweet</a>
       <input type="submit" value="submit">
       </form>
-    <%end%>
+    
   </body>
 </html>
