--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%=@user.name%>'s Fweets!</title>
+	<title>Your Fweets!</title>
 </head>
 <body>
-	  <br></br>
-		<%@user.tweets.each_with_index do |tweet, i|%>
-		<h3><%=i+1%>. <%=tweet.content%></h3>
-		<br></br>
-		<%end%>
+	<%@user.tweets.each do |tweet|%>
+		<%=tweet.content%>
+	<%end%>
 
 </body>
 </html>
