tweaked index of tweets page to show username

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,10 +6,10 @@
 <body>
   <h1><%=@user.name%></h1>
   <br></br>
-		<%@user.tweets.each_with_index do |tweet, i|%>
-		<h3><%=i+1%>. <%=tweet.content%></h3>
+		
+		<h3> <%=@tweet.content%></h3>
 		<br></br>
-		<%end%>
+		
 
     <a href="/logout">Log Out</a>
 </body>
