--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,19 +6,16 @@
   <body>
     <h3><%=@tweet.content%></h3>
     <br></br>
-    <h3>  - <%=@user.username%></h3>
+    <h3>  - <%=@user.username%></h3><br><br>
     
-
-    
-    <form method="post" action="/tweets/<%=@tweet.id%>/delete">
-    <input id="hidden" type="hidden" name="_method" value="delete">
+      <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a><br>
+        
+       <form method="post" action="/tweets/<%=@tweet.id%>/delete">
+    <input id="hidden" type="hidden" name="_method" value="delete"><br><br>
 
     <input type="submit" value="delete" id="Delete Tweet">
     <form>
 
-      <form action="/tweets/<%=@tweet.id%>/edit" method="GET">Edit Tweet</a>
-      <input type="submit" value="submit">
-      </form>
     
   </body>
 </html>
