--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
 <form action="/login" method="post">
   <input type="text" name="username" placeholder="username">
   <input type="password" name="password" placeholder="password">
-  <input type="submit" name="submit" value="Join">
+  <input type="submit" name="submit" value="submit">
 </form>
