--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,4 @@
+
 <form action="/signup" method="post">
 
     Name: <br><input type="text" name="username" id="username" required><br>
@@ -5,6 +6,6 @@
     Password <br><input type="password" name="password" id="password" required>
     <br>
 
-    <input type="submit" value="Sign Up">
+    <button type="submit" value="Sign Up" id="submit">
 
 </form>
