--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,6 +6,6 @@
     Password <br><input type="password" name="password" id="password" required>
     <br>
 
-    <input type="submit" value="Sign Up">
+    <input type="submit" id="submit" value="Sign Up">
 
 </form>
