--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -2,7 +2,7 @@
 
 <% if Helpers.is_logged_in?(session) %>
 <form action="/tweets" method="post">
-  Content: <br><input type="text" name="content" id="content"><br>
+  Content: <br><input type="text" name="content" id="content" required><br>
   <br><button type="submit" name="submit" id="submit">Submit</button>
 </form>
 <% end %>
