--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,13 @@
 <form action="/tweets/<%= @tweet.id %>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="content" value="<%= @tweet.content%>">
+  <input type="text_area" name="content" value="<%= @tweet.content%>">
+  <br />
   <input type="submit" value="submit" id="submit">
+</form>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="text_area"  value="<%= @tweet.content%>">
+  <br />
+  <input type="submit" value="Delete Tweet" id="delete">
 </form>
