--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,5 +3,8 @@
 
 <h5>Post by <%= @user.username %>.</h5>
 
-<a href=<%= "/tweets/#{@tweet.id}/delete"  %>>Delete Tweet</a>
+<form action=<%= "/tweets/#{@tweet.id}/delete" %> method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" name="submit" value="Delete Tweet">
+</form>
 <a href="/tweets/#{@tweet.id}/edit">Edit Tweet</a>
