--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
 <h1>Log In</h1>
 
-<form action="/tweets" method="POST">
+<form action="/login" method="POST">
   <br>Username:
   <input type="text" name="username">
   <br>Password:
