--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -5,5 +5,5 @@
   <input type="text" name="username">
   <br>Password:
   <input type="text" name="password">
-  <br><input type="submit" value="Log In">
+  <br><input type="submit" value="submit">
 </form>
