--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,6 +1,6 @@
 <h1>Tweet <%= @tweet.id %></h1>
 
-<%= @tweet.content %><br>
-<form action="/tweets/<%=@tweet.id%>">/delete" method="POST">
+<%= @tweet.content %>
+<p><form action="/tweets/<%=@tweet.id%>/delete" method="POST">
   <input type="submit" value="delete">
-</form>
+</form></p>
