--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,6 +1,12 @@
 <h1>Tweet <%= @tweet.id %></h1>
 
 <%= @tweet.content %>
-<p><form action="/tweets/<%=@tweet.id%>/delete" method="POST">
-  <input type="submit" value="delete">
-</form></p>
+<p>
+<form action="/tweets/<%=@tweet.id%>/delete" method="POST">
+  <input type="submit" value="Delete Tweet">
+</form>
+
+<form action="/tweets/<%=@tweet.id%>/edit" method="POST">
+  <input type="submit" value="Edit Tweet">
+</form>
+</p>
