--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,11 +2,9 @@
 
 <%= @tweet.content %>
 <p>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+
 <form action="/tweets/<%=@tweet.id%>/delete" method="POST">
   <input type="submit" value="Delete Tweet">
-</form>
-
-<form action="/tweets/<%=@tweet.id%>/edit" method="POST">
-  <input type="submit" value="Edit Tweet">
 </form>
 </p>
