--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,10 +1,13 @@
 <h1>Tweet <%= @tweet.id %></h1>
 
 <%= @tweet.content %>
-<p>
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+
+<% if current_user == @tweet.user %>
+  <p>
+  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+  </p>
+<% end %>
 
 <form action="/tweets/<%=@tweet.id%>/delete" method="POST">
   <input type="submit" value="Delete Tweet">
 </form>
-</p>
