--- a/app/views/tweets.erb
+++ b/app/views/tweets.erb
@@ -2,7 +2,8 @@
 
 <ul>
   <% @tweets.each do |tweet| %>
-    <li><a href="/tweets/<%=tweet.id%>"><%= tweet.content %></a> by <%=tweet.user.username%></li>
+    <li><a href="/tweets/<%=tweet.id%>"><%= tweet.content %></a> 
+      by <a href="/users/<%=tweet.user.slug%>"><%=tweet.user.username%></a></li>
   <% end %>
 </ul>
 
