--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -9,3 +9,5 @@
 <form action="/tweets/<%=@tweet.id%>/delete" method="POST">
   <input type="submit" value="Delete Tweet">
 </form>
+
+<p><a href="/tweets">All Tweets</a>
