--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,4 @@
+<h1>Login</h1>
 <form method="post" action="/login">
   <label for="username">Username:</label>
     <input type="text" id="username" name="username"/>
@@ -6,6 +7,6 @@
   <label for="password">Password:</label>
     <input type="password" id="password" name="password"/>
     <br></br>
-    
-  <input type="submit" value="Login"/>
+
+  <input type="submit" id="submit" value="submit"/>
 </form>
