--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,9 @@
-<h1>Here are your tweets</h1>
+<h1>Welcome, <%= @user.username %> </h1>
+<br></br>
 
-Hi Luna! 
+<h2>Tweets:</h2>
+<% @tweets.each do |tweet| %>
+<ul>
+  <li><%= tweet.content %></li>
+</ul>
+<% end %>
