--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,3 +1,13 @@
 <h1>Here is your most recent Tweet</h1>
 <br></br>
 <%= @tweet.content %>
+<br></br>
+
+<br></br>
+<form method="GET" action="/tweets/<%=@tweet.id%>/edit">
+  <input type="submit" id="Edit Tweet" value="Edit Tweet">
+</form>
+<br></br>
+<form action="/tweets/<%=@tweet.id%>/delete" method="POST">
+  <input type="submit" id="Delete Tweet" value="Delete Tweet">
+</form>
