--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,10 @@
-<form action="/signup" method="post">
+<center>
+
+  <form action="/signup" method="post">
   <p>Name: <input type="text" id="user_name" name="user[user_name]"></p>
   <p>Email: <input type="email" id="user_email" name="user[email]"></p>
   <p>Password: <input type="password" name="user[password]"></p>
   <input type="submit" value="Sign Up">
 </form>
+
+<p>Already a member? <a href="/tweets">Log in!</a>
