--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
 <% Tweet.all.each do |t| %>
-  <p><a href="#"><%=t.user.user_name%></a></p>
+  <p><a href="#"><%=t.user.username%></a></p>
   <p><%=t.content%></p>
   <% if t.user == current_user %>
     <a href="/tweets/<%=t.id%>/edit">Edit</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/tweets/<%=t.id%>/delete">Delete</a>
