--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,5 @@
 <h3>Edit your tweet!</h3>
 <form method="post" action="/tweets/<%=@tweet.id%>/edit">
     <input type="text" name="content" value="<%= @tweet.content %>">
-    <input type="submit" value="Edit">
+    <input type="submit" id="submit" value="Edit">
 </form>
