--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,9 @@
 <center>
   <h3>Login</h3>
   <form action="/login" method="post">
-    <p><input type="email" name="email" placeholder="Email"></p>
+    <p><input type="text" name="username" placeholder="Username"></p>
     <p><input type="password" name="password" placeholder="Password"></p>
-    <p><input type="submit" value="Submit"></p>
+    <p><input type="submit" id="submit" value="Submit"></p>
   </form>
   <p>Don't have an account? <a href="/signup">Sign Up.</a></p>
 </center>
