--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,4 @@
 <h1>Tweet No. <%=@tweet.id%></h1>
 <p><a href="/users/<%=@user.slug%>"><%=@user.username%></a></p>
 <p><%=@tweet.content%></p>
-<% if @tweet.user == current_user %>
-  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/tweets/<%=@tweet.id%>/delete"><button>Delete Tweet</button></a>
-<% end %>
+  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<form method="post" action="/tweets/<%=@tweet.id%>/delete"><input type="hidden" name="_method" value="DELETE"><input type="submit" id="Delete Tweet" value="Delete Tweet"></form>
