--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,5 @@
-<form method="post" action="/tweets">
+<h2>Create A New Tweet</h2>
+<form method="POST" action="/tweets">
   <label for="content">Tweet Content:</label>
   <input type="text-area" id="content" name="content"/>
   <br></br>
