--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,7 @@
-<form method="post" action="/tweets/<%= @tweet.id %>">
-  <label for="content">Tweet Content</label>
-    <input type="text=area" id="content" name="content" value="<%= @tweet.content %>">
-  <input type="submit" id="submit" value="submit"/>
+<h2> Edit Tweet </h2>
+
+<form method="post" action="/tweets/<%=@tweet.id%>">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
+  <input type="text" name="content" value="<%= @tweet.content %>">
+  <input type="submit" value="submit">
 </form>
