--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,6 +2,7 @@
 <p><a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a></p>
 
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
   <label>Delete Tweet</label>
   <input type="submit" id="submit" value="Delete Tweet"></input>
 </form>
