--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,10 +1,5 @@
-Welcome, user!
+<p> Welcome, <%= current_user.username %>
 
 <% @tweets.each do |tweet| %>
   <p><%= tweet.content %></p>
 <% end %>
-
-<form method="get" action="/logout">
-
-  <input type="submit" id="submit" value="Logout"/>
-</form>
