--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,5 @@
-<form method="post" action="/signup">
+<h3>Sign Up</h3>
+<form method="POST" action="/signup">
   <label for="username">Username:</label>
     <input type="text" id="username" name="username"/>
     <br></br>
