add new tweet button to tweets.erb

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-create a new tweet form
+<h1> New Tweet </h1>
 <form action="/tweets" method="POST">
 <input name="content" type="text" size="140" id="content">
 <input type="submit" value="Save" id="submit">
