refactor to add css

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,6 @@
-<h1> New Tweet </h1>
+<h3> New Tweet </h3>
 <form action="/tweets" method="POST">
-<input name="content" type="text" size="140" id="content">
+<p><input name="content" type="text" size="80" id="content"></p>
 <input type="submit" value="Save" id="submit">
+<br></br>
 </form>
