--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Fwitter</title>
   </head>
   <body>
-
+    <%= yield %>
   </body>
 </html>
