--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -5,6 +5,11 @@
     <title>Create User</title>
   </head>
   <body>
+    <h1>Signup for a new Fwitter account</h1>
 
+    <form action="/signup" method="post">
+      <input type="text" name="" value="">
+
+    </form>
   </body>
 </html>
