--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -8,7 +8,14 @@
     <h1>Signup for a new Fwitter account</h1>
 
     <form action="/signup" method="post">
-      <input type="text" name="" value="">
+      <label for="username">Username:</label>
+      <input type="text" name="username" value="">
+      <br>
+      <label for="email">Email:</label>
+      <input type="text" name="email" value="">
+      <br>
+      <label for="password">Password:</label>
+      <input type="text" name="password" value="">
 
     </form>
   </body>
