--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -10,13 +10,20 @@
     <form action="/signup" method="post">
       <label for="username">Username:</label>
       <input type="text" name="username" value="">
+
       <br>
+
       <label for="email">Email:</label>
       <input type="text" name="email" value="">
+
       <br>
+
       <label for="password">Password:</label>
       <input type="text" name="password" value="">
 
+      <br>
+
+      <input type="submit" name="Create User" value="">
     </form>
   </body>
 </html>
