--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -9,21 +9,21 @@
 
     <form action="/signup" method="post">
       <label for="username">Username:</label>
-      <input type="text" name="username" value="">
+      <input type="text" name="username" id="username">
 
       <br>
 
       <label for="email">Email:</label>
-      <input type="text" name="email" value="">
+      <input type="text" name="email" id="email">
 
       <br>
 
       <label for="password">Password:</label>
-      <input type="text" name="password" value="">
+      <input type="text" name="password" id="password">
 
       <br>
 
-      <input type="submit" name="Create User" value="">
+      <input type="submit" name="Create User">
     </form>
   </body>
 </html>
