--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -4,5 +4,5 @@
   <input type="text" name="content" placeholder="Your New Tweet:">
   <br>
 
-  <input type="submit" value="Create">
+  <input type="submit" id="submit" value="submit">
 </form>
