--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,6 +1,8 @@
-<h1>Hello <%=@user.username%>!</h1>
+<h1>Welcome, <%=@user.username%>!</h1>
 <%Tweet.all.each do |tweet|%>
   <h4><%=tweet.user.username%></h4>
   <p><%=tweet.content%></p>
   <br>
 <%end%>
+
+<a href="/logout">Log Out</a>
