--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,6 +3,7 @@
 
 <p><%=@tweet.content%></p>
 <form action="/tweets/<%=@tweet.id%>/delete" method="POST">
+  <input type="hidden" id="hidden" name="_method" value="DELETE">
   <input type="submit" name="Delete Tweet" id="Delete Tweet" Value="Delete Tweet">
 </form>
 <br>
