--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -7,5 +7,6 @@
     <input type="text" name="email" id="email">
     <h3><label>Password:</label></h3>
     <input type="text" name="password" id="password">
+    <br><br>
+    <input type="submit" value="Sign Up">
   </form>
-
