--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<h1>Here are your tweets, <%=@user.username%></h1>
+<h1>Here are your tweets, <%=@user.username%>!</h1>
 <%@user.tweets.all.each do |tweet|%>
   <h4><%=tweet.content%></h4>
   <br>
