--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,4 +5,6 @@
     <input type="text" name="username" id="username">
     <h3><label>Password:</label></h3>
     <input type="text" name="password" id="password">
+    <br><br>
+    <input type="submit" value="Log In">
   </form>
