--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tweet Index</title>
-  </head>
-  <body>
-
-  </body>
-</html>
+<h1>Welcome </h1>
