--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,29 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Create User</title>
-  </head>
-  <body>
-    <h1>Signup for a new Fwitter account</h1>
+<h1>Sign Up for a new Fwitter account</h1>
 
-    <form action="/signup" method="post">
-      <label for="username">Username:</label>
-      <input type="text" name="username" id="username">
-
-      <br>
-
-      <label for="email">Email:</label>
-      <input type="text" name="email" id="email">
-
-      <br>
-
-      <label for="password">Password:</label>
-      <input type="text" name="password" id="password">
-
-      <br>
-
-      <input type="submit" name="Create User">
-    </form>
-  </body>
-</html>
+  <form action="/signup" method="post">
+    <label for="username">Username:</label>
+    <input type="text" name="username">
+    <label for="email">Email:</label>
+    <input type="text" name="email">
+    <label for="password">Password:</label>
+    <input type="text" name="password">
+    <input type="submit" name="Create User">
+  </form>
