--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,9 @@
-<h1></h1>
+<h1>Welcome, <%= current_user.username%></h1>
+
+<h2>Tweets</h2>
+
+<% @tweets.each do |tweet| %>
+<%= tweet.content %>
+<%end%>
+<br>
+<a href="/tweets/new">Creat a new Tweet!</a>
