--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,5 +6,5 @@
     <h3><label>Password:</label></h3>
     <input type="text" name="password" id="password">
     <br><br>
-    <input type="submit" value="Log In">
+    <input type="submit" value="submit">
   </form>
