--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>User Login</title>
-  </head>
-  <body>
+<h1>Login</h1>
 
-  </body>
-</html>
+<form action="/login" method="post">
+  <input type="text" name="username" value="username">
+  <br>
+  <input type="text" name="password" value="password">
+  <br>
+  <input type="submit" name="submit">
+</form>
