--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,5 +5,7 @@
   <br>
   <input type="text" name="password" value="password">
   <br>
-  <input type="submit" name="submit">
+
+  <input type="submit" name="submit" value="submit">
+  <% # value MUST equal submit for test to pass %>
 </form>
