--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Show Users</title>
-  </head>
-  <body>
-
-  </body>
-</html>
+<h1><%=@current_user%> Tweets</h1>
