--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,7 @@
 <p><%=@tweet.content%></p>
-<form method = "POST" action = '/tweets/@tweet.id/edit'>
+<form method = "POST" action = '/tweets/<%=@tweet.id%>/edit'>
   <input type = 'submit' value = 'Delete'>Edit Tweet</input>
 </form>
-<form method = "POST" action = '/tweets/@tweet.id/delete'>
+<form method = "POST" action = '/tweets/<%=@tweet.id%>/delete'>
   <input type = 'submit' value = 'Delete'>Delete Tweet</input>
 </form>
