added links on home page

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,6 +2,7 @@
 <form method = "POST" action = '/tweets/<%=@tweet.id%>/edit'>
   <input type = 'submit' value = 'Delete'>Edit Tweet</input>
 </form>
+
 <form method = "POST" action = '/tweets/<%=@tweet.id%>/delete'>
-  <input type = 'submit' value = 'Delete'>Delete Tweet</input>
+  <input type = 'submit' value = 'Delete Tweet'>Delete Tweet</input>
 </form>
