--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Create Tweet</title>
-  </head>
-  <body>
+<h1>Create Tweet</h1>
 
-  </body>
-</html>
+<form action="/tweets" method="post">
+  <label for="content">New Tweet</label>
+  <input type="text" name="content" id="content">
+  <input type="submit" value="submit">
+</form>
