--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -10,5 +10,5 @@
   <label for="password">Password:</label>
   <input type="text" name="password">
   <br>
-  <input type="submit" name="Create User">
+  <input type="submit" value="submit">
 </form>
