--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,5 @@
-<h1><%=@current_user%> Tweets</h1>
+<h1><%=@user.username%> Tweets</h1>
+
+<% @user.tweets.each do |tweet| %>
+  <%= tweet.content %>
+<% end %>
