--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,7 @@
 <h1>Welcome, <%= @user.username %> </h1>
 
-<h2>Tweets</h2>
+<h2>Tweets:</h2>
+
+<% @tweets.each do |tweet| %>
+  <%= tweet.content %>
+<% end %>
