--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,1 @@
-<h1><%=@user.username%> Tweets</h1>
-
-<% @user.tweets.each do |tweet| %>
-  <%= tweet.content %>
-<% end %>
+<h1>Welcome, <%= current_user.username %> </h1>
