--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,10 @@
-<%= @tweet.content %>
+<p><%= @tweet.content %></p>
+
+<h3>Delete Tweet</h3>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
+
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
