--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,8 @@
-<h2> Welcome <%=@user.username%></h2>
+<h2> Welcome, <%=current_user.username%></h2>
+<h4> Tweets </h4>
+
+<h1><%@tweets.each do |tweet|%>
+<div>
+<%=tweet.content %>
+</div>
+<%end%></h1>
