--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
 <h1> Welcome to Fwitter </h1>
-<a href= '/signup'></a>
-<a href= '/login'></a>
+<a href= '/signup'>Sign Up</a>
+<a href= '/login'>Log In</a>
