--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,5 @@
+<h1> Welcome, <%= @user.username %></h1>
 <% Tweet.all.each do |tweet| %>
   <p><%= tweet.content %></p>
 <% end %>
+<a href= '/logout'> Log Out</a>
