--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
     <form action= "/login" method= "post">
       <input type= "text" name= "username">
       <input type= "text" name= "password">
-      <input type= "submit" value= "Log In">
+      <input type= "submit" id= "submit" value= "Log In">
     </form>
