--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,14 +1,17 @@
 <header>
-  <div style="text-align: right">
-    <!-- if the user is currently logged in, they can logout -->
+  <div align= "right">
+    <!-- if the user is currently logged in, they can create tweet or logout -->
     <% if session[:user_id] != nil %>
-      <a href="/tweets"> Create Tweet </a>
-      <a href="/logout"> Log Out </a>
-      <p>Welcome, <%=current_user.username %></p>
+      <a href="/tweets/new"><input type="button" value="Create Tweet" /></a>
+      <a href="/logout"><input type="button" value="Log Out" /></a>
+      <div align= "left">
+        <a>You are logged in as <%=@user.username%>.</a><br>
+      </div>
+
     <!-- If the user is not logged in, they can sign in or create an account -->
     <% else %>
-      <a href="/signup">Sign Up</a>
-      <a href="/login">Log In</a>
+      <a href="/signup"><input type="button" value="Sign Up" /></a>
+      <a href="/login"><input type="button" value="Log In" /></a>
     <%end%>
   </div>
 </header>
