--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -5,6 +5,7 @@
   <title>Tweets</title>
  </head>
  <body>
+   <h1>Welcome,</h1>
    <h1>Tweets:</h1>
    <h2><%= @tweets.each {|t| "#{t[:content]}"} %> </h2>
 
