--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,5 +3,5 @@
   <label>Content: </label>
   <input type= "text" name= "content" id= "content">
   <br></br>
-  <input type="submit" value="Publish">
+  <input type="submit" id= "submit" value="submit">
 </form>
