--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
-<h1> Welcome, <%= @user.username %></h1>
+<h1> Welcome, <%= current_user.username %></h1>
 <% Tweet.all.each do |tweet| %>
   <p><%= tweet.content %></p>
 <% end %>
