--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,5 +1,9 @@
 <h1><%= @tweet.content %></h1>
 <a href= "/tweets/edit_tweet"> Edit Tweet</a>
+
+<br></br>
+
 <form action= '/tweets/<%= @tweet.id %>/delete' method= "POST">
-  <input type="submit" id= "Delete Tweet" value="Delete Tweet">
+  <!-- <input id="hidden" type="hidden" name="_method" value="DELETE"> -->
+  <button type= "submit" name= "Delete Tweet" id= "Delete Tweet" value= "Delete Tweet"></button>
 </form>
