--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -7,9 +7,14 @@
  <body>
    <h2> <%= @tweet[:content] %> </h2>
 
+   <form method="post" action="/tweets/<%= @tweet.id %>/edit">
+   <input id="hidden" type="hidden" name="_method" value="edit">
+   <input type="submit" value="Edit Tweet">
+   </form>
+
    <form method="post" action="/tweets/<%= @tweet.id %>/delete">
    <input id="hidden" type="hidden" name="_method" value="delete">
-   <input type="submit" value="delete">
+   <input type="submit" value="Delete Tweet">
    </form>
 
  </body>
