--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -2,7 +2,7 @@
 
 <form action="/tweets" method="post">
   <label>Tweet:</label>
-  <input type="text" name="content">
+  <input type="text" name="content" id="content">
 
   <br />
 
