--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,5 +8,5 @@
     <label>Password:</label>
     <input type="password" name="password">
 
-    <input type="submit" value="Log In">
+    <input type="submit" value="submit">
   </form>
