--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,7 @@
 <%= @tweet.content %>
+
+<form method="post" action="/tweets/<%=@post.id%>/delete">
+ <input id="hidden" type="hidden" name="_method" value="delete">
+
+ <input type="submit" value="Delete Tweet">
+<form>
