--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,9 @@
 <h1> Create User </h1>
+
+<form action= "/signup" method="POST">
+  <input type="text" name="username" placeholder="username"> <br></br>
+  <input type="text" name="email" placeholder="email"> <br></br>
+  <input type="text" name="password" placeholder="password"> <br></br>
+
+  <input type="submit" value="Create New User">
+</form>
