--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -5,5 +5,5 @@
   <input type="text" name="email" placeholder="email"> <br></br>
   <input type="text" name="password" placeholder="password"> <br></br>
 
-  <input type="submit" value="Create New User">
+  <input type="submit" value="submit">
 </form>
