--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,9 +3,11 @@
 <h2><%= @tweet.content %></h2>
 <h3>By: <%= @tweet.user.username %></h3>
 
-<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 
-<form action="/tweets/<%= @tweet.id %>/delete" method="post">
-  <input type="hidden" id="hidden" name="_method" value="delete">
-  <input type="submit" name="" value="Delete Tweet">
-</form>
+<div style="text-align: center;">
+  <a href="/tweets/<%= @tweet.id %>/edit" style="text-align: center;">Edit Tweet</a>
+</div>
+  <form action="/tweets/<%= @tweet.id %>/delete" method="post">
+    <input type="hidden" id="hidden" name="_method" value="delete">
+    <input type="submit" name="" value="Delete Tweet">
+  </form>
