--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,10 +1,10 @@
 <h1>Fwitter</h1>
 <h2>Welcome, <%= @user.username %></h2>
+<h3><a href="/tweets/new"> Write a new tweet </a> |
+<a href="/logout">Logout</a></h3>
 
 <ul>
   <% @tweets.each do |tweet| %>
-    <li><%= tweet.content %></li>
+    <li><a href="/tweets/<%= tweet.id %>"> <%= tweet.content %></a></li>
   <% end %>
 </ul>
-
-<a href="/tweets/new"> Write a new tweet </a>
