--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,17 @@
+
+body {
+  background-color: #1DA1F2;
+  color: #FFF;
+}
+
+a:link, a:visited {
+  color: #FFF;
+}
+
+a:hover {
+  color: black;
+}
+
 h1  {
   text-align: center;
 }
