tests up to and including login passed

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,14 +6,13 @@
   </head>
   <body>
 
-    <form class="" action="/signup" method="post">
+    <form class="" action="/login" method="post">
 
-      <h1>Sign Up for an Account</h1>
+      <h1>Log In</h1>
 
-      <h2> Email: <input type="text" name="email" value=""> </h2>
       <h2> Username: <input type="text" name="username" value=""> </h2>
       <h2> Password: <input type="text" name="password" value=""> </h2>
-      <h2> <input type="submit" name="" value="Sign Up"> </h2>
+      <h2> <input type="submit" name="" value="Log In"> </h2>
     </form>
   </body>
 </html>
