tests passing up to and including logout

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -12,7 +12,7 @@
 
       <h2> Username: <input type="text" name="username" value=""> </h2>
       <h2> Password: <input type="text" name="password" value=""> </h2>
-      <h2> <input type="submit" name="" value="Log In"> </h2>
+      <h2> <input type="submit" name="" value="submit"> </h2>
     </form>
   </body>
 </html>
