--- a/app/index.erb
+++ b/app/index.erb
@@ -1,7 +1,10 @@
-<h1> Fwitter </1>
+<h1> Welcome to Fwitter</1>
 
-  <a href="/">Login</a>
-  link to login, where is login?
+<!-- get here from /, links to login or signup  -->
 
-  link to signup
-  <a href="/">Sign Up</a>
+<!-- link to login, where is login? -->
+  <a href="/sessions/login">Login</a>
+
+
+  <!-- link to signup -->
+  <a href="/registrations/signup">Sign Up</a>
