--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -2,7 +2,9 @@
 controller redirects to twitter index  -->
 
 <form action="/registration/signup" method="POST">
-  <input type="text" name="[user][username]" value="username">
-  <input type="text" name="[user][email]" value="email">
-  <input type="text" name="[user][password]" value="password">
+  <input type="text" name="username" value="username">
+  <input type="text" name="email" value="email">
+  <input type="text" name="password" value="password">
+
+  <input type="submit" value="signup">
 </form>
