--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -2,8 +2,8 @@
 
 <form action="/tweets" method="POST">
 
-  <label for="content">Status:</label>
-  <input name="tweet[content]" type="text" id="content"> </br>
+  <h3>Status:</h3>
+  <input name="content" type="text" id="content"> </br>
 
   <input type="submit" value="Create New Tweet">
 
