--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -3,4 +3,4 @@
  <%=tweet.content%><br/>
 <%end%>
 
-<a href="/tweets">Go back to your tweets</a>
+<!-- <a href="/tweets">Go back to your tweets</a> -->
