--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,3 +2,12 @@
  <h3><%=@tweet.content%></h3>
 
  <br><br>
+
+ <a href="tweet/<%=@tweet.id%>/edit">Edit tweet</a>
+
+ Delete tweet
+ <input id="hidden" type="hidden" name="_method" value="delete">
+ <form method="POST" action="/tweets/<%=@tweet.id%>/delete">
+
+ <input type="submit" value="Delete Tweet">
+</form>
