--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,14 +1,11 @@
-<body>
-  <div class="header">
-    <h5><a href="/">Flatiron Twitter</a></h5>
-    <% if current_user %>
-      <h5><a href='/logout'>Logout</a></h5>
-      <h5>Signed in as: <a href="/users/<%= current_user.username %>"><%= current_user.username %></a></h5>
-    <% else %>
-      <h5><a href="/login">Login</a></h5>
-    <% end %>
-  </div>
-  <div class="container">
-      <%= yield %>
-  </div>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/style.css">
+    <title>Fwitter</title>
+  </head>
+  <body>
+    <%= yield %>
+  </body>
+</html>
