--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,7 +1,7 @@
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="email" placeholder="Email:">
-  <input type="password" name="password" placeholder="Password:">
-  <input type="submit" value="Create User">
+  <input type="text" name="username" id="username" placeholder="Username:">
+  <input type="text" name="email" id= "email" placeholder="Email:">
+  <input type="text" name="password" id="password" placeholder="Password:">
+  <input type="submit" value="Sign Up">
 </form>
