--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -5,6 +5,6 @@
   <h3>Status:</h3>
   <input name="content" type="text" id="content"> </br>
 
-  <input type="submit" value="Create New Tweet">
+  <input type="submit" value="submit">
 
 </form>
