--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,15 +1,14 @@
 <%=session[:user_id]%>
 <h1>Edit your tweet</h1>
 
-<label for="old_tweet">Current tweet:</label>
+<h2>Current tweet:</h2>
 <%=@tweet.content%>
 
 <form action="/tweets/<%= @tweet.id %>" method="POST">
  <input type="hidden" name="_method" value="PATCH">
 
- <label for="new_tweet">Edit your tweet:</label>
- <input name="content" type="text" id="new_tweet">
- <br></br>
+ <h2>Edit your tweet:</h2>
+ <input name="content" type="text" id="content" value="<%= @tweet.content %>">
 
- <input type="submit" value="Edit Tweet">
+ <input type="submit" value="submit">
 </form>
