--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,13 +1,11 @@
 <label>Your tweet</label>
  <h3><%=@tweet.content%></h3>
-
+ <h3>By: <%= @tweet.user.username %></h3>
  <br><br>
 
  <a href="tweet/<%=@tweet.id%>/edit">Edit tweet</a>
 
- Delete tweet
- <input id="hidden" type="hidden" name="_method" value="delete">
  <form method="POST" action="/tweets/<%=@tweet.id%>/delete">
-
+ <input id="hidden" type="hidden" name="_method" value="delete">
  <input type="submit" value="Delete Tweet">
 </form>
