--- a/app/index.erb
+++ b/app/index.erb
@@ -1,10 +1,10 @@
-<h1> Welcome to Fwitter</1>
+<h1> Welcome to Fwitter</h1>
 
 <!-- get here from /, links to login or signup  -->
 
 <!-- link to login, where is login? -->
-  <a href="/sessions/login">Login</a>
+<h3>  <a href="/sessions/login">Login</a> </h3>
 
 
   <!-- link to signup -->
-  <a href="/registrations/signup">Sign Up</a>
+  <h3>  <a href="/registrations/signup">Sign Up</a> </h3>
