--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,9 +1,15 @@
 <!-- 3 fields, POST to...
 controller redirects to twitter index  -->
 
-<form action="/registration/signup" method="POST">
+<form action="/registrations/signup" method="POST">
+
+  <label for="username">username</label>
   <input type="text" name="username" value="username">
+
+  <label for="email">email</label>
   <input type="text" name="email" value="email">
+
+  <label for="password">Password</label>
   <input type="text" name="password" value="password">
 
   <input type="submit" value="signup">
