--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,3 +4,10 @@
 <%end%>
 
 <!-- <a href="/tweets">Go back to your tweets</a> -->
+
+<a href="tweet/<%=@tweet.id%>/edit">Edit Tweet</a>
+
+<form method="POST" action="/tweets/<%=@tweet.id%>/delete">
+<input id="hidden" type="hidden" name="_method" value="delete">
+<input type="submit" value="Delete Tweet">
+</form>
