--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -15,6 +15,7 @@
 
       <% user.tweets.each do |tweet| %>
         <h3> <%= tweet.content %> </h3>
+        <h3> <a href="/tweets/<%= tweet.id %>">Link to Tweet</a> </h3>
         <h3> -------------------- </h3>
       <% end %>
         <h3> %%%%%%%%%%%%%%%%%%%% </h3>
