--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -6,6 +6,10 @@
   </head>
   <body>
 
+    <h1> <a href="/tweets/new">Create New Tweet</a> </h1>
+
+    <h1> <a href="/logout"> Logout </a></h1>
+
     <h1> Edit your tweet, <%= @user.username %> </h1>
 
     <form class="" action="/tweets/<%= @tweet.id %>" method="post">
