--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,7 +9,7 @@
     <h1>Welcome to Fwitter!</h1>
 
     <h2><a href="/signup">Sign Up</a></h2>
-    <h2><a href="/logoin">Log In</a></h2>
+    <h2><a href="/login">Log In</a></h2>
 
 
   </body>
