--- a/app/views/tweets/create_tweets.erb
+++ b/app/views/tweets/create_tweets.erb
@@ -6,7 +6,10 @@
   </head>
   <body>
 
-    <h1> Create your tweet, <%= @user.username %> </h1>
+
+    <h1> <a href="/logout"> Logout </a>  </h1>
+
+    <h1> Create your tweet, <a href="/users/<%= @user.slug %>"> <%= @user.username %> </a></h1>
 
     <form class="" action="/tweets" method="post">
 
