--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,8 +6,12 @@
   </head>
   <body>
 
+    <h1> <a href="/tweets/new">Create New Tweet</a> </h1>
+    
+    <h1> <a href="/logout">Logout</a></h1>
+
     <h1> <%= @tweet.content %> </h1>
-    <h2> -- <%= @tweet.user.username %> </h2>
+    <h2> -- <a href="/users/<%= @tweet.user.slug %>"> <%= @tweet.user.username %> </a>  </h2>
 
     <form class="" action="/tweets/<%= @tweet.id %>/edit" method="get">
 
@@ -16,7 +20,7 @@
     </form>
 
     <form class="" action="/tweets/<%= @tweet.id %>/delete" method="post">
-      
+
       <input type="submit" name="" value="Delete Tweet">
 
     </form>
