--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,12 +6,18 @@
   </head>
   <body>
 
+    <h1> <a href="/tweets/new">Create New Tweet</a> </h1>
+    
+    <h1> <a href="/logout">Logout</a></h1>
+
     <h1> Welcome, <%= @user.username%> </h1>
+    <h1> Here are all the tweets: </h1>
     <h1> ~~~~~~~~~~~~~~~~~~~~~~~~~~~ </h1>
+
 
     <% User.all.each do |user| %>
 
-      <h2> Tweets by <%= user.username %>:</h2>
+      <h2> Tweets by <a href="/users/<%= user.slug %>"> <%= user.username %> </a>: </h2>
 
       <% user.tweets.each do |tweet| %>
         <h3> <%= tweet.content %> </h3>
