--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method="POST">
   Username: <input type="text" name="username"></input><br>
   Password: <input type="text" name="password"></input><br>
-  <input type="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
