--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,4 +1,5 @@
-<h3>Login</h3>
+<h1>Fwitter</h1>
+<h2>Login</h2>
 <form action="/login" method="POST">
   <input type="text" name="username" id="username" placeholder="Username:">
   <input type="text" name="password" id="password" placeholder="Password:">
