--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,4 +1,5 @@
-<h3>Sign Up</h3>
+<h1>Fwitter</h1>
+<h2>Sign Up</h2>
 <form action="/signup" method="POST">
   <input type="text" name="username" id="username" placeholder="Username:">
   <input type="text" name="email" id= "email" placeholder="Email:">
