--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,10 +1,7 @@
-<h1>Add a tweet</h1>
-
+<h1>Fwitter</h2>
+<h2>Create a New Tweet:</h2>
 <form action="/tweets" method="POST">
-
-  <h3>Status:</h3>
   <input name="content" type="text" id="content"> </br>
-
   <input type="submit" value="submit">
 
 </form>
