--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,11 +1,12 @@
-<label>Your tweet</label>
- <h3><%=@tweet.content%></h3>
+<h1>Fwitter</h1>
+ <h2><%=@tweet.content%></h2>
  <h3>By: <%= @tweet.user.username %></h3>
  <br><br>
 
- <a href="tweet/<%=@tweet.id%>/edit">Edit tweet</a>
+ <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
  <form method="POST" action="/tweets/<%=@tweet.id%>/delete">
  <input id="hidden" type="hidden" name="_method" value="delete">
  <input type="submit" value="Delete Tweet">
 </form>
+
