--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -5,9 +5,9 @@
 
 <!-- <a href="/tweets">Go back to your tweets</a> -->
 
-<a href="tweet/<%=@tweet.id%>/edit">Edit Tweet</a>
+<a href="/tweets/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
-<form method="POST" action="/tweets/<%=@tweet.id%>/delete">
+<form method="POST" action="/tweets/tweets/<%=@tweet.id%>/delete">
 <input id="hidden" type="hidden" name="_method" value="delete">
 <input type="submit" value="Delete Tweet">
 </form>
