--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,3 +1,7 @@
 <p><%= @tweet.content %></p>
-<a href="/tweets/edit/<%=@tweet.id%>" id="Edit Tweet">
-<input type="submit" value="Delete Tweet" id="Delete Tweet">
+<a href="/tweets/<%=@tweet.id%>/edit" id="Edit Tweet">
+
+<form method="POST" action="/tweets/<%= @tweet.id %>/delete">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet" id="Delete Tweet">
+</form>
