--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <h2>Welcome, Log in</h2>
-<form action="/sessions/login" method="POST">
+<form action="/users/login" method="POST">
 
   <label for="username">Username</label>
   <input type="text" name="username" value="username">
