--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,13 +2,12 @@
 
 
 <ul>
-  <li><a href="/">Home</a></li>
-    <% if is_logged_in?(session) %>
-      <li><a href="/sessions/logout">Logout</a> </li>
-      <li><a href="/tweets/new">New Tweet</a> </li>
+    <% if is_logged_in? %>
+      <li><a href="/users/logout">Logout</a> </li>
+      <li><a href="/tweets/index">New Tweet</a> </li>
 
     <% else %>
-      <li><a href="/sessions/login">Login</a> </li>
-      <li><a href="/registrations/signup">Signup</a> </li>
+      <li><a href="/users/login">Login</a> </li>
+      <li><a href="/users/signup">Signup</a> </li>
     <% end %>
 </ul>
