--- a/app/views/users/logout.erb
+++ b/app/views/users/logout.erb
@@ -1,7 +1,7 @@
 <h2>Logout Page </h2>
 <h3> "Welcome, <%=@user.name%>!"</h3>
 
- <form  action="/sessions/logout" method="POST">
+ <form  action="/user/logout" method="POST">
    <input type="text" value="Logout">
  </form>
 
