--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,12 +1,12 @@
 <!-- 3 fields, POST to...
 controller redirects to twitter index  -->
 
-<form action="/registrations/signup" method="POST">
+<form action="/users/signup" method="POST">
 
-  <label for="username">username</label>
+  <label for="username">Username</label>
   <input type="text" name="username" value="username">
 
-  <label for="email">email</label>
+  <label for="email">Email</label>
   <input type="text" name="email" value="email">
 
   <label for="password">Password</label>
