--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -5,3 +5,5 @@
   <input type="text" name="password" id="password" placeholder="Password:">
   <input type="submit" value="submit">
 </form>
+<br>
+<a href="/signup">New to Fwitter? Sign up!</a>
