--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,6 +1,5 @@
 <h2>Tweets Index Page </h2>
-<<h2>Tweets from <%= #{current_user.name} %> </h2> 
-<!-- or username, check  -->
+<<h2>Welcome  <%= {current_user.username} %> </h2> 
 
 <ul>
 	<% @tweets.each do |tweet| %>
