--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,12 +2,12 @@
 
 
 <ul>
-    <% if is_logged_in? %>
+    <% if logged_in? %>
       <li><a href="/users/logout">Logout</a> </li>
       <li><a href="/tweets/index">New Tweet</a> </li>
 
     <% else %>
       <li><a href="/users/login">Login</a> </li>
-      <li><a href="/users/signup">Signup</a> </li>
+      <li><a href="/user/signup">Signup</a> </li>
     <% end %>
 </ul>
