--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,6 @@
 <h2>New Tweet</h2>
-<form class="" action="/tweets" method="post">
+<form  action="/tweets/new" method="POST">
   <input type="text" name="content">
-  <input type="submit" name="" value="submit">
+  <input type="submit"  value="submit">
 </form>
+<!-- # or action - "/tweets " -->
