--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -4,13 +4,14 @@ controller redirects to twitter index  -->
 <form action="/users/signup" method="POST">
 
   <label for="username">Username</label>
-  <input type="text" name="username" value="username">
+  <input type="text" name="username" >
 
   <label for="email">Email</label>
-  <input type="text" name="email" value="email">
+  <input type="text" name="email">
 
   <label for="password">Password</label>
-  <input type="text" name="password" value="password">
+  <input type="text" name="password" >
 
   <input type="submit" value="signup">
 </form>
+
