--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,5 @@
 <h2>Tweets Index Page </h2>
-<<h2>Welcome  <%= {current_user.username} %> </h2> 
+<<h2>Welcome, <%= {tweet.user.username} %> </h2> 
 
 <ul>
 	<% @tweets.each do |tweet| %>
