--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,5 @@
 <h2>New Tweet</h2>
-<form  action="/tweets/new" method="POST">
+<form  action="/tweets" method="POST">
   <input type="text" name="content">
   <input type="submit"  value="submit">
 </form>
