--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,7 +1,7 @@
 <!-- 3 fields, POST to...
 controller redirects to twitter index  -->
 
-<form action="/users/signup" method="POST">
+<form action="/signup" method="POST">
 
   <label for="username">Username</label>
   <input type="text" name="username" >
