--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -6,3 +6,9 @@
   <input type="text" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
 </form>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet">
+
+</form>
