--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -3,3 +3,6 @@
   <input type="text" name="content">
   <input type="submit"  value="submit">
 </form>
+
+<h3><a href="/tweets/edit">Edit</a></h3>
+<h3><a href="/tweets/show">See All</a></h3>
