--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,15 +1,14 @@
+<p>This page shows the tweet that was just created</p>
 
+<%= @tweets.content %>
 
-
-<%=  @tweet.content %>
-
-<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+<form action="/tweets/<%= @tweets.user_id %>/delete" method="POST">
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet">
-
 </form>
 
-<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+<a href="/tweets/<%=@tweets.user_id%>/edit">Edit this Tweet</a>
 
-<h3><a href="/tweets/new"></a>Create</h3>
-<h3><a href="/tweets/edit"></a>Edit</h3>
+<h3><a href="/tweets/new">Create</a></h3>
+<h3><a href="/tweets">See All</a></h3>
+<h3><a href="/logout">Logout</a></h3>
