--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,15 +1,15 @@
 <h1>Enter Information Below to Sign Up:</h1>
 <form action="/signup" method="post">
   <label>Username:</label>
-  <input type="text" name="username" placeholder="Username:">
+  <input type="text" name="username" id="username" placeholder="Username:">
   <br>
 
   <label>Password:</label>
-  <input type="password" name="password" placeholder="Password:">
+  <input type="password" name="password" id="password" placeholder="Password:">
   <br>
 
   <label>Email:</label>
-  <input type="text" name="email" placeholder="Email:">
+  <input type="text" name="email" id="email" placeholder="Email:">
   <br>
 
   <input type="submit" name="submit" value="Sign Up">
