--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,12 +1,12 @@
-<h1>Enter Username and Password to Log In</h1>
+<h1>Enter Username and Password to Log In To Your Fwitter Account</h1>
 <form action="/login" method="post">
   <label>Username:</label>
-  <input type="text" name="username">
+  <input type="text" id="username" name="username">
   <br>
 
   <label>Password:</label>
-  <input type="text" name="password">
+  <input type="text" id="password" name="password">
   <br>
 
-  <input type="submit" name="submit" id="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
