--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,8 @@
+<h1>Create A New Tweet</h1>
+
 <form action="/tweets" method="post">
   <label>Your Tweet:</label>
+  <br>
   <input type="text" id="content" name="content">
-  <input type="submit" value="submit">
+  <input type="submit" id="submit" value="submit">
 </form>
