--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,10 +1,11 @@
-<h1>Update Tweet</h1>
+<h1>Edit Your Tweet</h1>
+
 <h3><%= @tweet.content %></h3>
 
 <form action="/tweets/<%=@tweet.id%>" method="post">
-  <input id="hidden" type="hidden" name="_method" value="patch">
+  <input type="hidden" name="_method" value="patch">
 
   <label>New Content:</label>
   <input type="text" id="content" name="content" value="<%=@tweet.content%>">
-  <input type="submit" value="submit">
+  <input type="submit" id="submit" value="Submit">
 </form>
