--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -10,13 +10,10 @@
       <label for="username">Username</label>
       <input type="text" name="username" id="username">
 
-      <label for="email">Email</label>
-      <input type="text" name="email" id="email">
-
       <label for="password">Password</label>
       <input type="password" name="password" id="password">
 
-      <input type="submit" value="Log In">
+      <input type="submit" value="Log In" id="submit">
     </form>
   </body>
 </html>
