--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -5,6 +5,20 @@
     <title>New Tweet from <%= current_user.username %></title>
   </head>
   <body>
+    <h1>Create New Tweet</h1>
+
+    <div class="tweet">
+      <form action="/tweets" method="post">
+        <label for="content">Tweet</label>
+        <br></br>
+        <textarea rows="4" cols="50" name="content" id="content">
+        </textarea>
+        <br></br>
+
+        <input type="submit" value="submit">
+
+      </form>
+    </div>
 
   </body>
 </html>
