--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,11 +6,11 @@
   </head>
   <body>
     <h1> Welcome, <%= current_user.username %></h1>
-    <a href="/logout">Logout</a> <a href="/tweets/new">New Tweet</a> <a href="/users/<%= current_user.username %>">Your Tweets</a>
+    <a href="/users/<%= current_user.slug %>"><input type="button" value="Profile"></a>
     <h2> Tweets </h2>
     <% @tweets.each do |tweet| %>
       <div>
-        <%= tweet.content %>
+        <%= tweet.content %> <a href="/tweets/<%= tweet.id %>"><input type="button" value="Show"></a>
       </div>
       <br>
     <% end %>
