--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,14 +1,16 @@
 <h2>Edit Tweet</h2>
 
-<form  action="/tweets/<%= @tweet.id %>/edit" method="POST">
+<form  action="/tweets/<%= @tweet.id %>" method="POST">
   <input type="hidden" name="_method" value="PATCH">
   
   <input type="text" name="content" value="<%= @tweet.content %>">
-  <input type="submit" value="submit">
+  <input type="submit" name="Edit Tweet" value="submit">
 </form>
 
+<!-- 
 <form action="/tweets/<%= @tweet.id %>/delete" method="post">
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet">
 
 </form>
+ -->
