--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,11 +1,11 @@
-<p>This page shows the tweet that was just created</p>
-
+<p>Tweet: </p>
 <%= @tweet.content %>
 <form action="/tweets/<%= @tweet.id %>" method="POST">
   <input type="hidden" name="_method" value="DELETE">
 
   <input type="submit" value="Delete Tweet">
 </form>
+
 
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
