--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,17 @@
-<p><%= @tweet.content %></p>
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
+<h1>Tweet Content:</h1>
+<h2><%= @tweet.content %></h2>
+<h1>From User:</h1>
+<h2><a href="/users/<%= @tweet.user.slug %>"> <%=@tweet.user.username %></a></h2>
+<br><br>
+
+<form action="/tweets/<%=@tweet.id%>/edit" method="get">
+	<input type="submit" value="Edit Tweet">
+</form>
+
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
-	<input id="hidden" type="hidden" name="_method" value="delete">
 	<input type="submit" value="Delete Tweet">
 </form>
+
+<h3><a href="/tweets">Home Page</a></h3>
+<h3><a href="/tweets/new">Create a new Tweet</a></h3>
+<h3><a href="/logout">Logout</a></h3>
