--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,12 @@
 <h1>Fwitter</h1>
-<h3>Sign up</h3>
+<h2>Sign up</h2>
 <form action="/signup" method="post">
-	<p>Name: <input type="text" name="username"></p>
+	<p>Username: <input type="text" name="username"></p>
 	<p>Email: <input type="text" name="email"></p>
 	<p>Password: <input type="text" name="password"></p>
-<input type="submit" value="Log In" id="submit">
+	<br><br>
+<input type="submit" value="Sign Up" id="submit">
 </form>
+
+<br><br>
+<a href="/">Home Page</a>
