--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,5 @@
-<h1>Create Tweet </h1>
+<h1>Create Tweet</h1>
+<form action="/tweets" method="post">
+  <input type="text" id="content" name="content" placeholder="Content">
+  <input type="submit" value="submit" id="submit">
+</form>
