--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,10 @@
-<h1>Show Tweet.erb </h1>
+
+<label>Tweet: </label>
+<%=@tweet.content%>
+<br></br>
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input type="hidden" id="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
+<br></br>
+<a href="tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
