--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -5,3 +5,5 @@
   <li><strong><%= tweet.user.username %>:</strong> <%= tweet.content %></li>
 <% end %>
 </ul>
+
+<p><a href="/logout">Logout</a></p>
