--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,10 @@
 <h1><%= @tweet.user.username %> tweeted...</h1>
 <p><%= @tweet.content %></p>
-<p><a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a></p>
+
+<% if @tweet.user == current_user %>
+  <p><a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a></p>
+<% end %>
+
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
