--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,5 @@
   Name:<input type="text" name="username" value=""><br><br>
   E-mail:<input type="text" name="email" value=""><br><br>
   Password:<input type="text" name="password" value=""><br><br>
-  <input type="submit">
+  <input type="submit" value="submit">
 </form>
