--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,7 @@
 <label><%= @tweet.id %><%= @tweet.content %></label>
 <form method="get" action="/tweets/<%=@tweet.id%>/edit">
   <input type="submit" name="edit_tweet" value="Edit Tweet">
+
+  <form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input type="hidden" name="_method" value="delete">
   <input type="submit" name="delete_tweet" value="Delete Tweet">
