Create sign up form and associated route.

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,16 @@
 <h1>Sign up</h1>
+
+<% unless locals.empty?%>
+  <%= message %>
+<% end %>
+<br></br>
+
 <form action="/signup" method="POST">
   <label>Username:</label><br></br>
-  <input type="text" name="username"><br>
+  <input type="text" name="username"><br></br>
+  <label>Email:</label><br>
+  <input type="text" name="email"><br></br>
+  <label>Password:</label><br>
+  <input type="password" name="password"><br></br>
   <button type="submit">Sign Up</button>
 </form>
