Update New Tweet form and route.

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
-<h1>Create A Tweet</h1>
+<h3>Create A Tweet</h3>
 <form action="/tweets" method="POST">
   <label>Status:</label>
-    <input type="text" name="content">
+    <input type="text" name="content"><br></br>
   <input class="btn btn-primary" type="submit" value="submit">
 </form>
