Update tweets controller. Update create tweet form. Create Tweets show page.

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,5 @@
 <h3>Create A Tweet</h3>
 <form action="/tweets" method="POST">
-  <label>Status:</label>
-    <input type="text" name="content"><br></br>
-  <input class="btn btn-primary" type="submit" value="submit">
+  <p>Status:<input type="text" name="content"></p>
+  <button type="submit">submit</button>
 </form>
