--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -3,3 +3,10 @@
     <%=tweet.content%>
   </div>
 <%end%>
+
+
+<h3>Create A Tweet</h3>
+<form action="/tweets" method="POST">
+  <p>Status:<input type="text" name="content"></p>
+  <button type="submit">submit</button>
+</form>
