--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -11,6 +11,6 @@
   <label>Email:</label><br>
   <input type="text" name="email"><br></br>
   <label>Password:</label><br>
-  <input type="text" name="password"><br></br>
+  <input type="password" name="password"><br></br>
   <button type="submit">Sign Up</button>
 </form>
